--- a/site_web/css/style.css
+++ b/site_web/css/style.css
@@ -586,13 +586,13 @@ ol {
 -----------------------*/
 
 .choseus-section {
-	background: #0a0a0a;
+	background: #013348;
 	padding-bottom: 70px;
 }
 
 .cs-item {
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 0px;
 }
 
 .cs-item:hover span {
@@ -604,7 +604,7 @@ ol {
 	height: 90px;
 	width: 90px;
 	background: rgba(255, 255, 255, 0.1);
-	border-radius: 50%;
+	border-radius: 40%;
 	display: inline-block;
 	color: #f36100;
 	line-height: 90px;
@@ -612,6 +612,25 @@ ol {
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
+}
+
+
+.cs-item img {
+	height: 70px;
+	width: 70px;
+	background: #95efff;
+	border-radius: 10%;
+	display: inline-block;
+	color: #f36100;
+	line-height: 90px;
+	text-align: center;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.cs-item:hover img {
+	background: #95efff;
+	color: #ffffff;
 }
 
 .cs-item h4 {
@@ -627,7 +646,7 @@ ol {
 -----------------------*/
 
 .classes-section {
-	background: #151515;
+	background: #013348;
 	padding-bottom: 80px;
 }
 
@@ -762,7 +781,7 @@ ol {
 -----------------------*/
 
 .pricing-section {
-	background: #151515;
+	background: #1e1e1e;
 }
 
 .pricing-section .section-title {
@@ -772,7 +791,7 @@ ol {
 .ps-item {
 	text-align: center;
 	padding: 40px 30px 52px;
-	border: 1px solid #464646;
+	border: 1px solid #ffffff;
 	-webkit-transform: skewY(-4deg);
 	-ms-transform: skewY(-4deg);
 	transform: skewY(-4deg);
@@ -802,7 +821,7 @@ ol {
 }
 
 .ps-item:hover .primary-btn.pricing-btn {
-	background: #f36100;
+	background: #5aadd7;
 }
 
 .ps-item:hover .thumb-icon {
@@ -829,7 +848,7 @@ ol {
 
 .ps-item .pi-price h2 {
 	font-size: 60px;
-	color: #f36100;
+	color: #5ea7d8;
 	font-weight: 600;
 }
 
@@ -880,7 +899,7 @@ ol {
 -----------------------*/
 
 .gallery-section {
-	background: #151515;
+	background: #013348;
 	overflow: hidden;
 }
 
@@ -939,7 +958,7 @@ ol {
 -----------------------*/
 
 .team-section {
-	background: #151515;
+	background: #013348;
 }
 
 .team-section.team-page {
@@ -1062,7 +1081,7 @@ ol {
 -----------------------*/
 
 .gettouch-section {
-	background: #0a0a0a;
+	background: #013348;
 	padding: 30px 0 15px;
 }
 
@@ -1131,7 +1150,7 @@ ol {
 -----------------------*/
 
 .footer-section {
-	background: #000000;
+	background: #012230;
 	padding-top: 50px;
 }
 
